# MANAS-Automation-Final-TP

task1/: README.md
task1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
task1/install/task1/share/task1/: package.ps1  package.sh  package.xml
task1/install/task1/share/task1/launch/: gazebo.launch.py
task1/install/task1/share/task1/urdf/: robot.urdf
task1/log/: latest_build
task1/task1/: README.md  setup.py
task1/task1/urdf/: robot.urdf
task2/: CMakeLists.txt  package.xml
task2/action/: Nav2Pose.action
task2/launch/: gazebo.launch.py
task2/task2/: client.py  controller.py  dead_reckoning.py
task2/urdf/: robot.urdf
